syntax = "proto3";
package datadog.test.v1;

option go_package = "/connectionserver"; // golang

// Connection represents a marshalled connection type that is being represented as a sequence of bytes.
message Connection {
  bytes data = 1;
}

message GetConnectionsRequest {
  string clientID = 1;
}

service SystemProbe {
  rpc GetConnections(GetConnectionsRequest) returns (stream Connection);
}
